@@ -18,12 +18,12 @@
 #  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 #
 
-SUFFIXES	= .cpp .hpp .idl .c .h .f .F .o .moc 
+SUFFIXES	= .cpp .hpp .idl .c .h .f .F .o .moc
 
 EXTRA_DIST	= GPL LGPL
 
-dist_pkgdata_DATA = Home.png
-					
+dist_pkgdata_DATA = header.html footer.html Home.png
+
 check-local:
 	@if test "$(top_srcdir)" != "$(top_builddir)"; then\
 	 for i in $(dist_pkgdata_DATA); do \
