@@ -1,6 +1,6 @@
 # -*- makefile -*-
 #
-# 
+#
 #
 # Copyright (C) 2004 Christophe Prud'homme (christophe.prudhomme@epfl.ch)
 #
@@ -23,16 +23,15 @@
 SUFFIXES	= .cpp .hpp .idl .c .h .f .F .o .moc
 
 dist_pkgdata_DATA = cube4x4.mesh cube8x8.mesh cube16x16.mesh cube32x32.mesh\
-                    cube_384.mesh cube_6007.mesh cylhexa.mesh cyltetra.mesh\
+            cylhexa.mesh cyltetra.mesh\
 		    piece-of-tube-wall-tetra.mesh hexa16x16.mesh hexa2x2.mesh\
 		    hexa32x32.mesh hexa4x4.mesh hexa8x8.mesh tube2x4x20.mesh\
 		    tube_curve20.mesh vessel2x4x20.mesh vessel2x4x20_10cm.mesh\
 		    vessel_curve20.mesh hexahexa10x10x10.mesh\
-                    tube20.mesh vessel20.mesh \
+            tube20.mesh vessel20.mesh \
             piece-of-tube.mesh piece-of-tube-wall.mesh hexa1x1.mesh tube.mesh vessel.mesh \
-            heart13628.mesh heart1959.mesh cyl2D.mesh \
-            vessel7x2_h002.mesh tube7x2_h002.mesh \
-            ellipsoid5272.mesh ellipsoid5272fibers
+            cyl2D.mesh \
+            vessel7x2_h002.mesh tube7x2_h002.mesh lid16.mesh
 
 check-local:
 	@if test "$(top_srcdir)" != "$(top_builddir)"; then\
